# ViolenceDetectionApp

./: README.md
android/DeteccionViolencia/: build.gradle.kts  settings.gradle.kts
android/DeteccionViolencia/app/: build.gradle.kts  google-services.json
android/DeteccionViolencia/app/src/androidTest/java/com/example/deteccionviolencia/: ExampleInstrumentedTest.kt
android/DeteccionViolencia/app/src/main/: AndroidManifest.xml
android/DeteccionViolencia/app/src/main/assets/lexicons/: adjetivosNegativos.txt  emojisViolentos.txt  groserias.txt  palabrasNoViolentas.txt  palabrasViolentas.txt  verbosNoViolentos.txt  verbosViolentos.txt
android/DeteccionViolencia/app/src/main/java/com/example/deteccionviolencia/: DeteccionViolenciaApp.kt  MainActivity.kt
android/DeteccionViolencia/app/src/main/java/com/example/deteccionviolencia/data/audio/: AudioPlaybackManager.kt  AudioRecorder.kt
android/DeteccionViolencia/app/src/main/java/com/example/deteccionviolencia/data/repository/: AuthRepository.kt  ClassificationRepository.kt  HistoryRepository.kt  ProfileRepository.kt  ResourcesRepository.kt  TranscriptionRepository.kt
android/DeteccionViolencia/app/src/main/java/com/example/deteccionviolencia/di/: AppModule.kt
android/DeteccionViolencia/app/src/main/java/com/example/deteccionviolencia/domain/model/: Analysis.kt  ClassificationResult.kt  HelpResource.kt  UserProfile.kt
android/DeteccionViolencia/app/src/main/java/com/example/deteccionviolencia/presentation/history/: HistoryDetailScreen.kt  HistoryScreen.kt  HistoryViewModel.kt
android/DeteccionViolencia/app/src/main/java/com/example/deteccionviolencia/presentation/home/: AnalysisScreen.kt  ConfirmationScreen.kt  HomeContract.kt  HomeScreen.kt  HomeViewModel.kt  RecordingScreen.kt  ResultsScreen.kt
android/DeteccionViolencia/app/src/main/jni/: CMakeLists.txt  whisper-android.cpp
android/DeteccionViolencia/app/src/main/jni/ggml/src/ggml-cpu/: vec.h
android/DeteccionViolencia/app/src/main/res/drawable/: circle_background_purple.xml  ic_chevron_right.xml  ic_notifications.xml  ic_privacy_lock.xml  rounded_background_gray.xml  rounded_background_result.xml  rounded_teal_light.xml
android/DeteccionViolencia/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/DeteccionViolencia/app/src/test/java/com/example/deteccionviolencia/: ExampleUnitTest.kt
android/DeteccionViolencia/gradle/: libs.versions.toml
android/DeteccionViolencia/gradle/wrapper/: gradle-wrapper.properties
backend/: .gitignore  main.py  requirements.txt
backend/model/: ModeloClasificador.pkl  tfidf_vectorizador.pkl
(+22 files in other folders)
